--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -33,6 +33,7 @@
         {{include './footer.html'}}
 
         <!-- 公共js脚本 -->
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         {{block 'script'}}
         {{/block}}
     </body>
