--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -34,6 +34,12 @@
 
         <!-- 公共js脚本 -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script>
+            // 全局混入, 影响所有Vue实例
+            Vue.mixin({
+                delimiters: ['{%', '%}']
+            })
+        </script>
         {{block 'script'}}
         {{/block}}
     </body>
