--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -6,6 +6,8 @@
                 <!-- Add "active" class when you're on that page" -->
                 <a class="nav-link active" href="/">Home</a>
             </li>
+
+            {{if sessionUser}}
             <li class="nav-item">
                 <a class="nav-link" href="/editor">
                     <i class="ion-compose"></i>&nbsp;New Article
@@ -16,18 +18,20 @@
                     <i class="ion-gear-a"></i>&nbsp;Settings
                 </a>
             </li>
+            <li>
+                <a class="nav-item" href="/profile/foo">
+                    <img class="user-pic" src="" />
+                    {{sessionUser.username}}
+                </a>
+            </li>
+            {{else}}
             <li class="nav-item">
                 <a class="nav-link" href="/login">Sign in</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/register">Sign up</a>
             </li>
-            <li>
-                <a class="nav-item" href="/profile/foo">
-                    <img class="user-pic" src="">
-                    image
-                </a>
-            </li>
+            {{/if}}
         </ul>
     </div>
 </nav>
