完成用户登录, 退出功能

--- a/views/login.html
+++ b/views/login.html
@@ -78,7 +78,12 @@
             methods: {
                 async handleSubmit() {
                     try {
-                        const { data } = await axios.post("/register", {
+                        const url =
+                            window.location.pathname === "/login"
+                                ? "/login"
+                                : "register";
+
+                        const { data } = await axios.post(url, {
                             user: this.user,
                         });
                         console.log(data);
