处理文章分页 50%

--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,5 @@
-{{extend './layout/layout.html'}}
-
-{{block 'body'}}
+{{extend './layout/layout.html'}} {{block 'body'}}
 <div class="home-page">
-
     <div class="banner">
         <div class="container">
             <h1 class="logo-font">conduit</h1>
@@ -12,7 +9,6 @@
 
     <div class="container page">
         <div class="row">
-
             <div class="col-md-9">
                 <div class="feed-toggle">
                     <ul class="nav nav-pills outline-active">
@@ -24,43 +20,29 @@
                         </li>
                     </ul>
                 </div>
-
+                {{each articles}}
                 <div class="article-preview">
                     <div class="article-meta">
-                        <a href="profile.html"><img src="http://i.imgur.com/Qr71crq.jpg" /></a>
+                        <a href="profile.html"
+                            ><img src="http://i.imgur.com/Qr71crq.jpg"
+                        /></a>
                         <div class="info">
                             <a href="" class="author">Eric Simons</a>
                             <span class="date">January 20th</span>
                         </div>
-                        <button class="btn btn-outline-primary btn-sm pull-xs-right">
+                        <button
+                            class="btn btn-outline-primary btn-sm pull-xs-right"
+                        >
                             <i class="ion-heart"></i> 29
                         </button>
                     </div>
                     <a href="" class="preview-link">
-                        <h1>How to build webapps that scale</h1>
-                        <p>This is the description for the post.</p>
+                        <h1>{{$value.title}}</h1>
+                        <p>{{$value.description}}</p>
                         <span>Read more...</span>
                     </a>
                 </div>
-
-                <div class="article-preview">
-                    <div class="article-meta">
-                        <a href="profile.html"><img src="http://i.imgur.com/N4VcUeJ.jpg" /></a>
-                        <div class="info">
-                            <a href="" class="author">Albert Pai</a>
-                            <span class="date">January 20th</span>
-                        </div>
-                        <button class="btn btn-outline-primary btn-sm pull-xs-right">
-                            <i class="ion-heart"></i> 32
-                        </button>
-                    </div>
-                    <a href="" class="preview-link">
-                        <h1>The song you won't ever stop singing. No matter how hard you try.</h1>
-                        <p>This is the description for the post.</p>
-                        <span>Read more...</span>
-                    </a>
-                </div>
-
+                {{/each}}
             </div>
 
             <div class="col-md-3">
@@ -79,12 +61,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 </div>
 {{/block}}
-
-
-
